[package]
name = "baston"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
console = "0.15.4"
dialoguer = "0.10.2"
lazy_static = "1.4.0"
idgenerator = "2.0.0"
ggez = { git = "https://github.com/ggez/ggez", branch = "devel" }
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"

[features]
graphical_mode = []